# masters-thesis

./: .gitignore  README.md  classifier.py  flatten.py  pyproject.toml
.archive/ml_tests/: classifier.py  dataset_process.py  main.py
backend/: db.sqlite3  script.py
backend/api/: audit_mixins.py  audit_utils.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/classifier/: classifier.py  config.py  progress_state.py
backend/api/management/commands/: seed_db.py
backend/api/migrations/: 0001_initial.py  0002_alter_aianalysis_model_version.py  0003_ensembleresult_ensembleresultmodel_and_more.py  0004_remove_ensembleresult_models_and_more.py  0005_chestscan_final_label_alter_medicalcase_status.py  0006_chestscan_final_label_set_at.py
backend/classifier/: classifier.py
backend/pneumonia_diagnosis/: asgi.py  settings.py  urls.py  wsgi.py
backend/users/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_role_doctorprofile_patientprofile.py
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css
frontend/src/lib/: Footer.svelte  Header.svelte  api.ts  auth.ts  types.ts
frontend/src/lib/components/: AdminDashboard.svelte  AnalysisCard.svelte  CaseCard.svelte  DoctorDashboard.svelte  FormMedicalCase.svelte  PatientDashboard.svelte  ScanDetail.svelte  ScanForm.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/auth/: +page.svelte  load.ts
frontend/src/routes/login/: +page.svelte  load.ts
(+18 files in other folders)
