[project]
name = "masters-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lime>=0.2.0.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "plotly>=6.1.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]==2.15.1",
    "tf-explain>=0.3.1",
]
