[project]
name = "masters-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.8",
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-extensions>=4.1",
    "django-rest-framework>=0.1.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "faker>=37.5.3",
    "graphviz>=0.21",
    "kaleido>=1.1.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "plotly>=6.1.2",
    "pydot==2.0.0",
    "pydot-ng~=2.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow[and-cuda]==2.15.1",
    "tf-explain>=0.3.1",
    "tqdm>=4.67.1",
]
